# learn-modern-cpp

lean-boost-build/: Jamroot  world.cpp
learn-cpm/: CMakeLists.txt  README.md  main.cpp
learn-make/: .gitignore  Makefile  common.cpp  hello.cpp
learn-vcpkg/: .gitignore  CMakeLists.txt  README.md  test1.cpp  test2.cpp  vcpkg.json
